# wfractal

./: .gitignore  CMakeLists.txt  README.md  builddoc.ps1
doc/fractallanguage/: ast.tex  commands.tex  configuration.tex  introduction.tex  main.tex  packages.tex
doc/fractallanguage/images/: logo.eps  tree-sample-01.tex
src/: CMakeLists.txt
src/fractal/: AST.h  CMakeLists.txt  FractalGlobal.hpp  Instruction.cpp  Instruction.hpp  Variable.cpp  Variable.hpp
tests/fractal/: CMakeLists.txt  Variable.cpp  stdafx.cpp  stdafx.hpp
